<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleForm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_induk">Nomor Induk Siswa</string>
    <string name="simpan">Simpan</string>
    <string name="output_informasi">Output Informasi</string>
    <string name="home">Home</string>
    <string name="textview">TextView</string>
    <string name="kembali">Kembali</string>
    <string name="home_activity">Home Activity</string>

</resources>
